@@ -210,6 +210,7 @@ Chronological list of authors
   - Moritz Schaeffler
   - Xu Hong Chen
   - Domenico Marson
+  - Ahmed Salah Ghoneim
 
 External code
 -------------
