@@ -16,10 +16,12 @@ The rules for this file:
   
 ??/??/?? IAlibay, pgbarletta, mglagolev, hmacdope, manuel.nuno.melo, chrispfae, 
          ooprathamm, MeetB7, BFedder, v-parmar, MoSchaeffler, jbarnoud, jandom,
-         xhgchen, jaclark5, DrDomenicoMarson
+         xhgchen, jaclark5, DrDomenicoMarson, AHMED-salah00
  * 2.5.0
 
 Fixes
+  * Fix the misleading 'AtomGroup.guess_bonds()' docs and passed missing
+    arguments (PR #4059)
   * Fix for NetCDF trajectories without `time` variable (Issue #4073)
   * Allows shape_parameter and asphericity to yield per residue quantities
     (Issue #3002, PR #3905)
